Cooler sounding guitar.

--- a/todo
+++ b/todo
@@ -2,3 +2,5 @@
 - Instrument list. Focus on guitar?
 - Show notes on an actual fretboard.
 - Add randomness for empty notes.
+- Fix the Select CSS module.
+- Aesthetic. Name and logo. About. Links to code.
