--- a/todo
+++ b/todo
@@ -1,15 +1,18 @@
 Before going live:
 
-- Aesthetic. Name and logo.
-- Readme.
-- Get a proper favicon
+- Save/Share/Load App state.
+- Analytics
+- Bug: All notes seem to play at once when starting the sound engine.
+- Have some sort of indication of the notes that are in the current selected Key and Mode.
+- Aesthetic. Name and logo. Readme. Favicon
 - Instrument selection.
 - A less intrusive UI that allows for more space for the notes.
 - Add randomness for empty notes.
-- Save/Share/Load App state.
 
 Ideas to explore:
 
+- Animate the line with a dot or something could be fun.
+- Useful keyboard shortcuts.
 - Show notes on an actual fretboard.
 - Rhythms mode vs Lead mode.
 - Save multiple configurations you've liked.
