--- a/todo
+++ b/todo
@@ -3,7 +3,9 @@ Before going live:
 - Save/Share/Load App state.
 - Analytics
 - Bug: All notes seem to play at once when starting the sound engine.
+- I shouldn't show the "Hey please click" message if the player is already available.
 - Have some sort of indication of the notes that are in the current selected Key and Mode.
+- When octaves have a gap, represent it in the NotesGrid somehow.
 - Aesthetic. Name and logo. Readme. Favicon
 - Instrument selection.
 - A less intrusive UI that allows for more space for the notes.
