--- a/todo
+++ b/todo
@@ -1,15 +1,20 @@
 Before going live:
 
 - Save/Share/Load App state.
+  - Have a better message about the link being copied.
 - Analytics
-- Bug: All notes seem to play at once when starting the sound engine.
-- I shouldn't show the "Hey please click" message if the player is already available.
-- Have some sort of indication of the notes that are in the current selected Key and Mode.
-- When octaves have a gap, represent it in the NotesGrid somehow.
-- Aesthetic. Name and logo. Readme. Favicon
-- Instrument selection.
-- A less intrusive UI that allows for more space for the notes.
-- Add randomness for empty notes.
+  - https://vercel.com/goatonabicycle/billions-of-notes/analytics
+- Bugs
+  - All notes seem to play at once when starting the sound engine.
+  - I shouldn't show the "Hey please click" message if the player is already available.
+- Style:
+  - Aesthetic. Name and logo. Readme. Favicon
+  - Have some sort of indication of the notes that are in the current selected Key and Mode.
+  - When octaves have a gap, represent it in the NotesGrid somehow.
+  - A less intrusive UI that allows for more space for the notes.
+- Functionality:
+  - Instrument selection.
+  - Add randomness for empty notes.
 
 Ideas to explore:
 
