--- a/todo
+++ b/todo
@@ -5,8 +5,7 @@ Before going live:
   - I shouldn't show the "Hey please click" message if the player is already available.
   - Line rendering is sometimes off. E3 -> A3 -> E4 for example shows a line that starts high and ends low.
 - Style:
-  - Aesthetic. Name and logo. Readme. Favicon
-    x Have some sort of indication of the notes that are in the current selected Key and Mode.
+  - Aesthetic. Name and logo. Readme. Favicon. Consistency.
   - When octaves have a gap, represent it in the NotesGrid somehow.
   - A less intrusive UI that allows for more space for the notes.
 - Functionality:
@@ -15,6 +14,7 @@ Before going live:
 
 Ideas to explore:
 
+- "Buy me a coffee" link. ko.fi?
 - Animate the line with a dot or something could be fun.
 - Useful keyboard shortcuts.
 - Octaves could be grouped meaningfully. That would mean not needing to render the notes being played with their octave numbers
