--- a/todo
+++ b/todo
@@ -8,14 +8,13 @@
 - Functionality:
   - Instrument selection based on the items available in the midi player.
   - Add randomness for empty notes. "Empty note chance" -> [None][Some][Many]
-  - Clicking on "New Notes" should set the grid back to index 0 before playing the notes.
-    x Analytics.
 
 ---
 
 ## Ideas to explore:
 
-- Add a circle of 5ths.
+- WTF is this website modal.
+- Different guitar tunings
 - Animate the line with a dot or something could be fun.
 - Add a very small representation of the note names to the drawn title line.
 - Useful keyboard shortcuts.
@@ -38,4 +37,5 @@
 - A zooming mechanism to navigate the notes that have been generated.
 - Cypress for integration level tests.
 - 7 String guitar mode.
-- Different guitar tunings
+
+- Add a circle of 5ths.
