--- a/todo
+++ b/todo
@@ -20,13 +20,15 @@
     - 137 - Xylophone
 
   - Add randomness for empty notes. "Empty note chance" -> [None][Some][Many]
+  - A popup explaining the idea and wtf this is.
+  - Fretboard improvements. Right now it only really works when playing in the 3rd and 4th octaves.
+  - Once the above is better, add different guitar tunings
+  -
 
 ---
 
 ## Ideas to explore:
 
-- WTF is this website modal.
-- Different guitar tunings
 - Animate the line with a dot or something could be fun.
 - Add a very small representation of the note names to the drawn title line.
 - Useful keyboard shortcuts.
@@ -36,18 +38,15 @@
   - [S] = Save as midi.
   - [1 -> 8] could toggle the selected octaves?
 - Octaves could be grouped meaningfully. Maybe some sort of indication left of the current row title.
-- Show notes on a guitar fretboard. Make it possible to switch between piano roll and fretboard mode.
-  - Rhythms/chord mode vs Lead mode?
+- Make playing chords a possibility?
 - The user should be able to drag notes into other slots that fit the scale by literally clicking and dragging a given note.
 - Save multiple configurations you've enjoyed. Be able to load them up later.
 - Allow single note items to be played as if they're tremolo'd.
   - Add "Tremolo" as a variable. Tremolo X of the selected notes randomly.
 - Allow a single note to ring over multiple indexes. Add this as a variable with randomness.
-- "Stop" button that resets the notes being played back to the 0 index?
 - More interesting visualizations of the generated notes.
 - Increase possible number of generated notes.
 - A zooming mechanism to navigate the notes that have been generated.
 - Cypress for integration level tests.
 - 7 String guitar mode.
-- The fretboard would be cool with a hover effect that highlights all the other places where that note is.
 - Add a circle of 5ths
