Trying out Cypress.

--- a/todo
+++ b/todo
@@ -23,7 +23,9 @@
   - A popup explaining the idea and wtf this is.
   - Fretboard improvements. Right now it only really works when playing in the 3rd and 4th octaves.
   - Once the above is better, add different guitar tunings
-  -
+  - Fretboard markings at 3,5,7,9, 12, 15, 17,19
+  - More tempo accuracy.
+  - Palm mute!
 
 ---
 
