--- a/todo
+++ b/todo
@@ -47,3 +47,4 @@
 - A zooming mechanism to navigate the notes that have been generated.
 - Cypress for integration level tests.
 - Add a circle of 5ths
+- Add a vertical piano roll with the notes coming down from the top.
