--- a/todo
+++ b/todo
@@ -47,4 +47,5 @@
 - A zooming mechanism to navigate the notes that have been generated.
 - Cypress for integration level tests.
 - Add a circle of 5ths
-- Add a vertical piano roll with the notes coming down from the top.
+- Add a vertical piano roll with the notes comingdown from the top.
+my mens...hierdie grondpad wobble my tieties en ek haat dit maar ek is lief vir jou!
