Removed the silly commit for yesterday.

--- a/todo
+++ b/todo
@@ -48,4 +48,4 @@
 - Cypress for integration level tests.
 - Add a circle of 5ths
 - Add a vertical piano roll with the notes comingdown from the top.
-my mens...hierdie grondpad wobble my tieties en ek haat dit maar ek is lief vir jou!
+- Add many more random interactive messages.
