--- a/todo
+++ b/todo
@@ -1,7 +1,6 @@
 ## Todo
 
 - Finish styling the new, improved fretboard.
-- Control volume of the app.
 - Add randomness for empty notes. "Empty note chance" -> [None][Some][Many]
   - These notes should not be played.
 - A popup explaining the idea and wtf this is.
@@ -35,6 +34,15 @@
 - Add a circle of 5ths
 - Add a vertical piano roll with the notes coming down from the top.
 
-Make the distinction between the fretboard and the pianoroll more clear. 
-Sheet music stuff? 
-Make the generated notes more obvious.
+Feedback 
+- Make the distinction between the fretboard and the pianoroll more clear. 
+- Could I add sheet music stuff? 
+- Make the actually generated notes more obvious. Not just on the PianoRoll
+- Create a better sense of Input -> [Generated Output]
+- Quarter notes of half notes. 
+- Guitar Tuning. 
+- Guitar mode vs Piano mode. 
+- Invert the colors for the fretboard. Make the playing notes bright and non playable notes dark. To make things more obvious
+
+  
+
