A new guitar focused component. Moved inputs.

--- a/todo
+++ b/todo
@@ -3,7 +3,7 @@
 Feedback 
 - Make the distinction between the fretboard and the pianoroll more clear. 
 - Could I add sheet music stuff? 
-- Make the actually generated notes more obvious. Not just on the PianoRoll
+x Make the actually generated notes more obvious. Not just on the PianoRoll
 - Create a better sense of [Input] -> [Generated Output]
 - Quarter notes of half notes. 
 - Guitar mode vs Piano mode. 
