--- a/todo
+++ b/todo
@@ -1,8 +1,6 @@
 ## Todo
 
 # Do mode:
-x Fretboard items: Make it possible to change the number of frets you care about.
-- Move the code and kofi stuff to the footer/elsewhere.
 - A button with a modal explaining the idea and wtf this is.
   - Write a bunch of words for this.
 - Fix the sharing mechanism. 
@@ -12,6 +10,9 @@ x Fretboard items: Make it possible to change the number of frets you care about
 - Generally improve accessibility. Tab through the elements should be clearly visible and flow well.
 - Palm mute mode. The audio engine can create this effect. See the Loop Component. It's the last variable in `playChordNow`
 - The notes generated should be editable. Perhaps you could drag them in the "What has been generated" set of blocks?
+  - Finish this idea. Fix the styling. How should empty notes be dealt with? 
+- "I like these notes, Give me a variation" -> Use the current notes but jiggle them around
+- Give me a second verse with these notes -> This could use the same notes but maybe change the last note to something else?
 - Add many more random interactive messages. Make this more prominent and obvious.
 - For any scale, when hovering over the notes on the fretboard, show the relationship that note has with the root note. (Minor third, Perfect 5th, etc)
 - Add keyboard shortcuts.   - [Space] for play/pause.   - [N] = new notes.   - [R] = Reset.  - [S] = Save as midi.  
