--- a/todo
+++ b/todo
@@ -4,10 +4,9 @@
 - A button with a modal explaining the idea and wtf this is.
   - Write a bunch of words for this.
 - Fix the sharing mechanism. 
-- Add more modes? 
-  Replacing with scales. 
 - Add more instruments.
   - Does it make sense for the individual elements to have custom duration properties?
+  - Get all of these programmatically?
 - Generally improve accessibility. Tab through the elements should be clearly visible and flow well.
 - Palm mute mode. The audio engine can create this effect. See the Loop Component. It's the last variable in `playChordNow`
 - The notes generated should be editable. Perhaps you could drag them in the "What has been generated" set of blocks?
