--- a/todo
+++ b/todo
@@ -3,27 +3,25 @@
 # Do mode:
 - A button with a modal explaining the idea and wtf this is.
   - Write a bunch of words for this.
-- Fix the sharing mechanism. 
 - Add more instruments.
   - Does it make sense for the individual elements to have custom duration properties?
-  - Get all of these programmatically?
+  - Get all of these programmatically? ( this.midiSounds.player.loader.instrumentKeys()?)
 - Generally improve accessibility. Tab through the elements should be clearly visible and flow well.
 - Palm mute mode. The audio engine can create this effect. See the Loop Component. It's the last variable in `playChordNow`
 - The notes generated should be editable. Perhaps you could drag them in the "What has been generated" set of blocks?
-  - Finish this idea. Fix the styling. How should empty notes be dealt with? 
-- "I like these notes, Give me a variation" -> Use the current notes but jiggle them around
+  - Finish this idea. Improve the styling. How should empty notes be dealt with? 
 - A more in depth "These are the notes in this scale" mode. Show the whole and half steps.
 - Give me a second verse with these notes -> This could use the same notes but maybe change the last note to something else?
+  - "I like these notes, Give me a variation" -> Use the current notes but jiggle them around
 - Add many more random interactive messages. Make this more prominent and obvious.
 - For any scale, when hovering over the notes on the fretboard, show the relationship that note has with the root note. (Minor third, Perfect 5th, etc)
-- Add keyboard shortcuts.   - [Space] for play/pause.   - [N] = new notes.   - [R] = Reset.  - [S] = Save as midi.  
 - Flat vs sharp mode. Make it an option. Options page, generally?
 - Number of frets -> Make this a two way slider. 
-- A metronome that plays more percussive notes? 
 - Add a light/dark mode. Use something like this: https://uiverse.io/andrew-demchenk0/nasty-frog-73
 
 # Think about it mode: 
 - Could I add sheet music stuff? 
+- A metronome that plays more percussive notes? 
 - Finish styling the new, improved fretboard.
   - Invert the colors for the fretboard maybe? Make the playing notes bright and non playable notes dark. To make things more obvious
 - Bass component: The tuning of bass guitars is strange because when it gets to 6 strings it doesn't just go lower. Cater for this.  
