--- a/todo
+++ b/todo
@@ -29,3 +29,6 @@
 - Add a circle of 5ths
 - Add a vertical piano roll with the notes coming down from the top.
 
+There are a couple of bugs. 
+- check the storage hook. 
+- check share. 
