--- a/todo
+++ b/todo
@@ -1,5 +1,11 @@
 ## Todo
 
+# BUGS!!!
+  - Occasionally, the Guitar (and likely the bass) component does not show any notes being played. Other components do seem to have notes though. 
+  - The localstorage idea isn't working anymore. Reloading a page after changing any of inputs reset it back to the initial state. 
+  - Right now, the theming for dark mode sucks so much that it seems broken.
+  - Changing the tuning of the guitar component does not result in the "reset tuning" button showing up immediately (It does after reloading though. Skill/state issue.)
+
 # Do mode:
 
 - A more in depth "These are the notes in this scale" mode. Show the whole and half steps.
